--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -1,23 +1,14 @@
 \chapter*{Introduction}
 
-Les systèmes biologiques qui nous entourent présentent une incroyable diversité de structures leur permettant d'évoluer et de s'adapter à leur environnement.
-Des systèmes en apparence simples présentent ainsi des capacités d'optimisation de tâches. Le blob est par exemple un être unicellulaire capable de s'étendre sur plusieurs mètres. Uniquement grâce aux communications chimiques opérant au sein de son plasmodium, il est capable de trouver le chemin le plus court dans un labyrinthe entre deux points sur lesquels sont placés de la nourriture \cite{Nakagaki2000IntelligenceMB} ou de retrouver une configuration optimale d'un réseau de transport. Il sont même capables d'apprentissage~: deux entités qui fusionnent se transmettent des connaissances de leur environnement, montrant qu'elles ont chacune emmagasiné, à un point, de l'information sur ce dernier.
-Les colonies de fourmis, quant à elles constituées de milliers, voire de millions d'individus, sont capables de s'auto-organiser pour effectuer des tâches complexes de coopération pour construire leur nid, se défendre face aux prédateurs et trouver leur nourriture via une communication par leurs phéromones, son et toucher.
-Autrement dit, ces systèmes biologiques présentent des capacités de calcul remarquables. 
-Toutes ces stratégies mises en place par des systèmes biologiques ont inspiré de nombreux algorithmes d'optimisation imitant par exemple les colonies de fourmis, les essaims d'abeilles, les groupes de chats, les bancs de poissons ou encore les baleines, tous ces groupes d'animaux présentant des méthodes de communication décentralisées efficaces pour accomplir une tâche donnée~\cite{Darwish2018BioinspiredCA}.
-
+Les systèmes biologiques qui nous entourent présentent une incroyable diversité de structures leur permettant d'évoluer et de s'adapter à leur environnement, implémentant finalement des tâches de calcul.
 Un parangon de système biologique de calcul est sans conteste le cerveau humain ou animal, qui est capable d'exécuter des tâches de calcul et d'apprentissage incroyablement sophistiquées via une multitude de signaux électriques et chimiques circulant entre les neurones et au sein des vaisseaux sanguins.
-L'inspiration biologique occupe ainsi une place de premier rang dans les débuts de la recherche en intelligence artificielle.
-Face à des modèles d'intelligence artificiels plus symboliques, les modèles à base d'apprentissage ont été initialement développés en s'appuyant sur le modèle biologique du neurone, afin de chercher à imiter les capacités d'évolution et d'adaptation à l'origine de la notion d'apprentissage dans les réseaux de neurones biologiques.
-Le perceptron, modèle à l'origine des réseaux de Deep Learning les plus performants à l'heure actuelle, s'inspirait par exemple du modèle de neurone biologique~\cite{McCulloch1990ALC}.
+L'inspiration biologique occupe ainsi une place de premier rang dans les débuts de la recherche en intelligence artificielle. Face à des modèles d'intelligence artificiels plus symboliques, les modèles à base d'apprentissage ont été initialement développés en s'appuyant sur le modèle biologique du neurone, afin de chercher à imiter les capacités d'évolution et d'adaptation à l'origine de la notion d'apprentissage dans les réseaux de neurones biologiques. Le perceptron, modèle à l'origine des réseaux de Deep Learning les plus performants à l'heure actuelle, s'inspirait par exemple du modèle de neurone biologique~\cite{McCulloch1990ALC}.
 La diversité des applications actuelles de l'apprentissage automatique et le développement de nombreux modèles très performants ont amené la recherche en apprentissage automatique à se concentrer principalement sur une approche algorithmique et computationnelle de ces réseaux, en particulier pour les architectures de Deep Learning. 
 Cet éloignement de la biologie permet de s'extraire des contraintes physiques liées au neurone pour envisager des règles de calcul adaptées à une tâche spécifique.
 Néanmoins, la biologie, par sa diversité de comportements encore incompris, reste une source d'inspiration abondante pour apporter des paradigmes alternatifs ou complémentaires aux modèles d'apprentissage existants dans l'état de l'art. De plus, le comportement du cerveau est loin d'être entièrement compris et modélisé, ce qui signifie que les possibilités d'inspiration biologique sont constamment en train d'évoluer.
-% Les réseaux de neurones impulsionnels (\emph{Spiking Neural Networks}) sont un exemple de modèle d'apprentissage illustrant une complémentarité récente entre l'approche bio-inspirée et l'approche computationnelle.
-% Ces réseaux de neurones ont été développés dès les années 1990~\cite{Maass1996NetworksOS} et s'appuient directement sur le modèle biologique du neurone.
-% Ils apparaissent dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception de modèles d'apprentissage moins énergivores et distribués, grâce à la conception d'architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}. De nombreux travaux cherchent ainsi à adapter des réseaux de neurones classiques de l'état de l'art dans une version impulsionnelle, faisant ainsi passer les SNN de la biologie au calcul~\cite{Schuman2022OpportunitiesFN}.
-% De tels modèles apportent de nouveaux paradigmes de calcul pouvant se combiner avec des approches plus appliquées.
-% Nous pensons ainsi qu'il est pertinent de continuer à explorer des modèles d'apprentissage automatique inspirés de la biologie.
+
+Les cartes de Kohonen \parencite{Kohonen1982} sont un autre exemple de modèle initialement inspiré de considérations biologiques. Directement inspirées de l'organisation du cortex, leurs règles de calcul ont évolué vers 
+
 La thèse que nous présentons développe un modèle d'apprentissage élaboré à la fois dans une démarche d'inspiration biologique et utilisant des techniques plutôt calculatoires.
 Concernant l'inspiration biologique, de nombreuses modélisations générales du cortex cérébral, telle que~\cite{binzegger05, Meunier2009HierarchicalMI,sporns_structure_2013,betzel_multi-scale_2017} proposent que le cortex est une architecture composée de modules auto-organisés.
 Ces modules communiquent autour des informations sensorielles collectées par l'organisme. Cette communication est réalisée de façon interne, liant des informations sensorielles et abstraites provenant de différentes parties du cortex et à différentes échelles spatiotemporelles. Enfin, bien qu'une hiérarchie de traitement de l'information apparaisse entre ces modules, certains traitant des entrées sensorielles et d'autres des entrées plus abstraites, de nombreux circuits de rétroactions entre les modules semblent présents à différents niveaux de l'architecture.
@@ -103,3 +94,19 @@ Idées : plutôt se concentrer sur la SOM en elle-même. Champs d'application, p
 Voila ce qui n'a pas été réalisé, et voila ce que je propose : injecter de l'information de position 
 démarche synthétique
 caractériser le comportement émergent des cartes.
+
+
+
+% Des systèmes en apparence simples présentent ainsi des capacités d'optimisation de tâches. Le blob est par exemple un être unicellulaire capable de s'étendre sur plusieurs mètres. Uniquement grâce aux communications chimiques opérant au sein de son plasmodium, il est capable de trouver le chemin le plus court dans un labyrinthe entre deux points sur lesquels sont placés de la nourriture \cite{Nakagaki2000IntelligenceMB} ou de retrouver une configuration optimale d'un réseau de transport. Il sont même capables d'apprentissage~: deux entités qui fusionnent se transmettent des connaissances de leur environnement, montrant qu'elles ont chacune emmagasiné, à un point, de l'information sur ce dernier.
+% Les colonies de fourmis, quant à elles constituées de milliers, voire de millions d'individus, sont capables de s'auto-organiser pour effectuer des tâches complexes de coopération pour construire leur nid, se défendre face aux prédateurs et trouver leur nourriture via une communication par leurs phéromones, son et toucher.
+% Autrement dit, ces systèmes biologiques présentent des capacités de calcul remarquables. 
+% Toutes ces stratégies mises en place par des systèmes biologiques ont inspiré de nombreux algorithmes d'optimisation imitant par exemple les colonies de fourmis, les essaims d'abeilles, les groupes de chats, les bancs de poissons ou encore les baleines, tous ces groupes d'animaux présentant des méthodes de communication décentralisées efficaces pour accomplir une tâche donnée~\cite{Darwish2018BioinspiredCA}.
+
+
+
+
+% Les réseaux de neurones impulsionnels (\emph{Spiking Neural Networks}) sont un exemple de modèle d'apprentissage illustrant une complémentarité récente entre l'approche bio-inspirée et l'approche computationnelle.
+% Ces réseaux de neurones ont été développés dès les années 1990~\cite{Maass1996NetworksOS} et s'appuient directement sur le modèle biologique du neurone.
+% Ils apparaissent dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception de modèles d'apprentissage moins énergivores et distribués, grâce à la conception d'architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}. De nombreux travaux cherchent ainsi à adapter des réseaux de neurones classiques de l'état de l'art dans une version impulsionnelle, faisant ainsi passer les SNN de la biologie au calcul~\cite{Schuman2022OpportunitiesFN}.
+% De tels modèles apportent de nouveaux paradigmes de calcul pouvant se combiner avec des approches plus appliquées.
+% Nous pensons ainsi qu'il est pertinent de continuer à explorer des modèles d'apprentissage automatique inspirés de la biologie.
