--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1893,3 +1893,13 @@
   volume={2},
   pages={9-13}
 }
+
+@ARTICLE{1094577,
+  author={Linde, Y. and Buzo, A. and Gray, R.},
+  journal={IEEE Transactions on Communications}, 
+  title={An Algorithm for Vector Quantizer Design}, 
+  year={1980},
+  volume={28},
+  number={1},
+  pages={84-95},
+  doi={10.1109/TCOM.1980.1094577}}
